Ruta Client 0.1.0-SNAPSHOT
This is the first minor release of Ruta Client Application. From now on Ruta will mostly follow semantic versioning scheme.

Features:

- Embedded eXist database is used as a local data store instead of files.
- Implemented support for exploration of reported bugs and sending comments on those reports.
- Secured local data in some cases of JVM shutdown prior the program termination by the user. 

Bug fixes:

- Fixed bug that was allowing non-registered users to send a bug report.
- Fixed other minor bugs.

--------------------

Ruta Client 0.0.3
This is the patch release of the Ruta Client Application.

Feature:

- Error stream is redirected to err.txt file

Bug fixes:

- Fixed bug not showing that My Party has been deregistered after successfully finished deregistration

--------------------

Ruta Client 0.0.2
This is the first patch release of the Ruta Client Application.

Features:

- Implemented deletion of the previously added product in My Catalogue
- Preference usage is deprecated and from now on .properties file is used to store Ruta Client instance specific settings

Bug fixes:

- (Hopefully) Fixed issue when connecting to the CDR service
- Fixed bug when deleting a product from My Catalogue, where My Catalogue was not marked as dirty
- Fixed bug not disabling Deregister My Party menu item after calling CDR service
- Fixed bug not being able to remove previously added attachment to a Bug Report

--------------------

Ruta Client 0.0.1
This is initial release of the Ruta Client Application.

Features:

- Implemented support for creation and management of My Party
- Implemented support for creation and management of My Catalogue
- Implemented support for saving the local data to the xml file
- Implemented import of local data from the selected xml file
- Implemented export of the local data to the xml file
- Implemented registration procedure of My Party with Central Data Repository