@@ -1,8 +1,10 @@
 #Ruta Client properties
-#Sat Jan 06 09:40:41 CET 2018
-mainFrame.height=800
-mainFrame.top=95
+#Sun Jan 07 09:43:30 CET 2018
+mainFrame.height=832
+started=false
+mainFrame.top=112
 mainFrame.title=Ruta Client - Rutasd
-cdrEndPoint=http\://localhost\:7709/ruta-server-0.1.0-SNAPSHOT/CDR
-mainFrame.width=1192
-mainFrame.left=374
+D\:\\Fakultet\\_Diplomski\\_diplomski\ rad\\git\\RutaClient=false
+cdrEndPoint=http\://ruta.sytes.net\:9009/ruta-server-0.1.0-SNAPSHOT/CDR
+mainFrame.width=1242
+mainFrame.left=334
